# yugioh

./: .dir-locals.el  .gitignore  README.md  cabal.project  config.nix  default.nix  hie.yaml  package.yaml  shell.nix  stack-shell.nix  stack.yaml  yugioh.cabal
exe/: Main.hs
exec/: Main.hs
lib/: Action.hs  Attribute.hs  BattlePhase.hs  Card.hs  CardEffects.hs  CardEffectsActivation.hs  CardEffectsResolution.hs  ChooseMove.hs  ChooseOption.hs  Configuration.hs  DrawPhase.hs  Driver.hs  Duel.hs  DuelHelpers.hs  Duelist.hs  EndPhase.hs  GameEffects.hs  Identifier.hs  In.hs  Lenses.hs  Location.hs  Log.hs  MainPhase.hs  Mat.hs  Mechanics.hs  Move.hs  Operation.hs  Phase.hs  Player.hs  Position.hs  Space.hs  Type.hs  Utils.hs  Victory.hs  Zipper.hs
lib/Card/: BeaverWarrior.hs  BlueEyesWhiteDragon.hs  CurseOfDragon.hs  DarkMagician.hs  SaggiTheDarkClown.hs
lib/YuGiOh/: Action.hs  Attribute.hs  BattlePhase.hs  Card.hs  ChooseOption.hs  Configuration.hs  DrawPhase.hs  Driver.hs  Duel.hs  DuelHelpers.hs  Duelist.hs  EndPhase.hs  Fresh.hs  GameEffects.hs  In.hs  Lenses.hs  Location.hs  Log.hs  MainPhase.hs  Mat.hs  Move.hs  Operation.hs  Phase.hs  Player.hs  Position.hs  Space.hs  Type.hs  Utils.hs  Victory.hs
lib/YuGiOh/Card/: BeaverWarrior.hs  BlueEyesWhiteDragon.hs  CurseOfDragon.hs  DarkMagician.hs  SaggiTheDarkClown.hs
lib/YuGiOh/Classes/: Displayable.hs  Flippable.hs
nix/: sources.json
