Name:               yugioh
Version:            0.1
Synopsis:           Yu-Gi-Oh! simulator
Description:        No copyright infrigement intended! :D
License:            GPL-3
License-file:       LICENSE
Author:             Valentin Robert
Maintainer:         valentin.robert.42@gmail.com
Stability:          Experimental
Category:           Games
Build-type:         Simple
Cabal-version:      >=1.22

Library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   lib
  build-depends:    base               >= 4.0  && < 5.0,
                    extensible-effects >= 3.1  && < 3.2,
                    interpolate        >= 0.2  && < 0.3,
                    lens               >= 4.17 && < 4.18,
                    monad-loops        >= 0.4  && < 0.5,
                    random             >= 1.1  && < 1.2
  exposed-modules:  Card.BeaverWarrior
                    Card.BlueEyesWhiteDragon
                    ChooseMove
                    Driver
                    Duelist
                    Log
                    Utils
                    Victory
  other-modules:    Attribute
                    Card
                    Configuration
                    DrawPhase
                    Duel
                    EndPhase
                    GameEffects
                    In
                    Lenses
                    Location
                    MainPhase
                    Mat
                    Mechanics
                    Move
                    Phase
                    Player
                    Position
                    Space
                    Type
                    Zipper

Executable yugioh
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   exec
  main-is:          Main.hs
  build-depends:
    base,
    extensible-effects,
    yugioh
